--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_collections.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_collections.scss
@@ -66,7 +66,22 @@
 .duck-collection-dropdowns {
   text-align: center;
   @include media-breakpoint-up(md) {
-    text-align: left;
+    text-align: right;
+  }
+  ul {
+    display: inline-block;
+    li {
+      display: inline-block;
+      padding-right: 12px;
+      a {
+        &.active {
+          color: #d8120f;
+        }
+      }
+    }
+  }
+  span {
+    display: inline-block;
   }
 }
 
