--- a/wp-content/themes/duck-and-cover/assets/sass/site/secondary/_widgets.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/site/secondary/_widgets.scss
@@ -15,7 +15,8 @@
 .sidebar {
   @extend .container;
   @include media-breakpoint-up(md) {
-    display: flex;
+    //display: flex;
+    display: block;
   }
 }
 .widget {
