--- a/wp-content/themes/duck-and-cover/assets/sass/search/_search-type-1.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/search/_search-type-1.scss
@@ -83,7 +83,10 @@
             }
         }
         .search-submit {
-            display: none;
+            //display: none;
+            position: absolute;
+            left: 0;
+            opacity: 0;
         }
     }
     &.open {
