--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_lookbooks.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_lookbooks.scss
@@ -3,6 +3,11 @@
     @include backgroundCover;
     .lookbooks-all_single {
       padding: 530px 0 80px 0;
+      h1 {
+        font-size: 42px;
+        text-transform: uppercase;
+        color: #ffffff;
+      }
     }
   }
 }
