--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_product.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_product.scss
@@ -1,3 +1,8 @@
+// Single product thumbnails
+.slick-track {
+  margin: 0 auto;
+}
+
 // Top navigation
 .navigation-shop-mobile {
   .product_list_widget {
