--- a/wp-content/themes/duck-and-cover/assets/css/main.css
+++ b/wp-content/themes/duck-and-cover/assets/css/main.css
@@ -6770,16 +6770,20 @@ input[type="submit"]:not(.grey-button),
     margin-left: 20px; }
   #header .row.row-xs-center, #header #reviews #review_form_wrapper .row-xs-center.comment-form, #reviews #review_form_wrapper #header .row-xs-center.comment-form {
     background: white !important; }
-  #header.reduced-header #logo {
-    padding: 2px 0 2px 15px; }
-    #header.reduced-header #logo a {
-      width: 50px; }
-  #header.reduced-header .header-social ul li a {
+  #header.reduced-header {
     height: 53px; }
-  #header.reduced-header #primary-menu li.menu-item {
-    padding: 16px 0; }
-  #header.reduced-header .sub-menu {
-    top: 53px !important; }
+    #header.reduced-header #logo {
+      padding: 2px 0 2px 15px; }
+      #header.reduced-header #logo a {
+        width: 50px; }
+    #header.reduced-header .header-social ul li a {
+      height: 53px; }
+    #header.reduced-header #primary-menu li.menu-item {
+      padding: 16px 0; }
+    #header.reduced-header .sub-menu {
+      top: 53px !important; }
+    #header.reduced-header .mobile-right {
+      top: 6px !important; }
   #header .container-fluid {
     position: relative; }
   #header .header-social {
@@ -11707,6 +11711,27 @@ body.boxed .navigation-shop.container, body.boxed .navigation-shop.sidebar {
         color: #d8120f; }
   .duck-collection-dropdowns span {
     display: inline-block; }
+
+.duck-collection-filter-list #mobile-expand-filters {
+  display: block;
+  background: #ddd;
+  padding: 12px 32px 10px 32px;
+  font-size: 20px;
+  text-align: center; }
+  .duck-collection-filter-list #mobile-expand-filters i {
+    padding-left: 6px;
+    font-size: 15px;
+    vertical-align: middle;
+    margin-top: -3px; }
+  @media (min-width: 1024px) {
+    .duck-collection-filter-list #mobile-expand-filters {
+      display: none; } }
+
+.duck-collection-filter-list .sidebar {
+  display: none; }
+  @media (min-width: 1024px) {
+    .duck-collection-filter-list .sidebar {
+      display: block; } }
 
 .duck-collection-filter-list .widget {
   width: 100%; }
