--- a/wp-content/themes/duck-and-cover/assets/sass/header/_header.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/header/_header.scss
@@ -30,6 +30,7 @@
     background: white !important;
   }
   &.reduced-header {
+    height: 53px;
     #logo {
       padding: 2px 0 2px 15px;
       a {
@@ -46,6 +47,9 @@
     }
     .sub-menu {
       top: 53px !important;
+    }
+    .mobile-right {
+      top: 6px !important;
     }
   }
   .container-fluid {
